--- a/calculadora.html
+++ b/calculadora.html
@@ -11,39 +11,40 @@
   </head>
 
   <body>
-    <main class="fundo">
+    <main>
       <h1>Bruno Hebling</h1>
       <div class="calculadora">
         <h2>Calculadora</h2>
-        <p id="resultado">23432</p>
+        <p id="resultado"></p>
         <table>
           <tr>
-            <td><button>C</button></td>
-            <td><button><</button></td>
-            <td><button>/</button></td>
-            <td><button>X</button></td>
+            <td><button onclick="clean()">C</button></td>
+            <td><button onclick="back()"><</button>
+            </td>
+            <td><button onclick="insert('/')">/</button></td>
+            <td><button onclick="insert('*')">X</button></td>
           </tr>
           <tr>
-            <td><button>7</button></td>
-            <td><button>8</button></td>
-            <td><button>9</button></td>
-            <td><button>-</button></td>
+            <td><button onclick="insert('7')">7</button></td>
+            <td><button onclick="insert('8')">8</button></td>
+            <td><button onclick="insert('9')">9</button></td>
+            <td><button onclick="insert('-')">-</button></td>
           </tr>
           <tr>
-            <td><button>4</button></td>
-            <td><button>5</button></td>
-            <td><button>6</button></td>
-            <td><button>+</button></td>
+            <td><button onclick="insert('4')">4</button></td>
+            <td><button onclick="insert('5')">5</button></td>
+            <td><button onclick="insert('6')">6</button></td>
+            <td><button onclick="insert('+')">+</button></td>
           </tr>
           <tr>
-            <td><button>1</button></td>
-            <td><button>2</button></td>
-            <td><button>3</button></td>
-            <td rowspan="2"><button class="button-equal">=</button></td>
+            <td><button onclick="insert('1')">1</button></td>
+            <td><button onclick="insert('2')">2</button></td>
+            <td><button onclick="insert('3')">3</button></td>
+            <td rowspan="2"><button class="button-equal" onclick="calcular()">=</button></td>
           </tr>
           <tr>
-            <td colspan="2"><button class="button-zero">0</button></td>
-            <td><button>.</button></td>
+            <td colspan="2"><button class="button-zero" onclick="insert('0')">0</button></td>
+            <td><button onclick="insert('.')">.</button></td>
           </tr>
 
         </table>
